CustomObjects/objects/invoiceit_s__Grouping__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipName>Transaction_Aggregarate_Volume_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Minimum_Customer_Spend_Amount__c</fullName>
        <label>Minimum Customer Spend Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Based</fullName>
                </value>
                <value>
                    <fullName>Minimum Customer Spend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Grouping</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grouping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>